Working hello world example

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "event_emitter",
   "version": "1.0.0",
   "description": "Generates events to send to EventBridge",
-  "main": "app.js",
+  "main": "index.js",
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
