--- a/template.yaml
+++ b/template.yaml
@@ -17,7 +17,8 @@ Resources:
       Runtime: nodejs18.x
       Architectures:
       - x86_64
-      Handler: src/app.lambdaHandler
+      CodeUri: src
+      Handler: index.lambdaHandler
       # This property associates this Lambda function with a scheduled CloudWatch Event. For all available properties, see
       # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule
       # This example runs every 5 mins
@@ -29,6 +30,14 @@ Resources:
             Schedule: cron(0/5 * * * ? *)
       MemorySize: 128
       Timeout: 100
+    Metadata: # Manage esbuild properties
+      BuildMethod: esbuild
+      BuildProperties:
+        Minify: true
+        Target: es2020
+        Sourcemap: true
+        EntryPoints:
+        - index.ts
 # # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
