--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "@aws-sdk/client-eventbridge": "^3.316.0",
     "esbuild": "^0.14.14"
   },
   "devDependencies": {
