--- a/template.yaml
+++ b/template.yaml
@@ -9,19 +9,17 @@ Transform:
 Resources:
   # This is the Lambda function definition associated with the source code: sqs-payload-logger.js. For all available properties, see
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-  ScheduledEventLogger:
+  EmitterLambda:
     Type: AWS::Serverless::Function
     Properties:
-      Description: A Lambda function that logs the payload of messages sent to an
-        associated SQS queue.
+      Description: A Lambda function that logs the payload of messages sent to an associated SQS queue.
       Runtime: nodejs18.x
       Architectures:
       - x86_64
       CodeUri: src
       Handler: index.lambdaHandler
-      # This property associates this Lambda function with a scheduled CloudWatch Event. For all available properties, see
-      # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#schedule
-      # This example runs every 5 mins
+      Policies:
+      - AmazonEventBridgeFullAccess
       Events:
         CloudWatchEvent:
           Type: Schedule
@@ -38,6 +36,32 @@ Resources:
         Sourcemap: true
         EntryPoints:
         - index.ts
+
+  EventRuleSuccess: 
+    Type: AWS::Events::Rule
+    Properties: 
+      Description: "EventRule for success events"
+      EventPattern: 
+        source: 
+          - "emitter"
+        detail: 
+          status: 
+            - "success"
+      State: "ENABLED"
+
+  EventRuleFailure: 
+    Type: AWS::Events::Rule
+    Properties: 
+      Description: "EventRule for failure events"
+      EventPattern: 
+        source: 
+          - "emitter"
+        detail: 
+          status: 
+            - "failure"
+      State: "ENABLED"
+
+
 # # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
